--- a/src/styles.css
+++ b/src/styles.css
@@ -13,11 +13,11 @@
     }
   }
   .btn {
-    @apply font-bold py-2 px-4 rounded;
+    @apply font-medium py-2 px-4 rounded;
   }
-  .btn-blue {
-    @apply bg-blue-500 text-white;
+  .btn-black {
+    @apply bg-black text-white;
   }
-  .btn-blue:hover {
-    @apply bg-blue-700;
+  .btn-black:hover {
+    @apply bg-white text-black;
   }
