add bg pattern and detect user language

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @layer base {
     h1 {
       @apply text-2xl;
@@ -20,4 +21,13 @@
   }
   .btn-black:hover {
     @apply bg-white text-black;
+  }
+
+
+  .bg-dot{
+    /* background-color: #e5e5f7; */
+    opacity: 0.8;
+    background-image:  radial-gradient(#444cf7 0.5px, transparent 0.5px), radial-gradient(#444cf7 0.5px, #ffc100 0.5px);
+    background-size: 20px 20px;
+    background-position: 0 0,10px 10px;
   }
