--- a/src/styles.css
+++ b/src/styles.css
@@ -24,10 +24,29 @@
   }
 
 
-  .bg-dot{
-    /* background-color: #e5e5f7; */
-    opacity: 0.8;
-    background-image:  radial-gradient(#444cf7 0.5px, transparent 0.5px), radial-gradient(#444cf7 0.5px, #ffc100 0.5px);
-    background-size: 20px 20px;
-    background-position: 0 0,10px 10px;
+  .bg-yDot{
+    background-color: #ffc100;
+    opacity: 1;
+    background-image:  radial-gradient(#5b5b5d 0.6000000000000001px, transparent 0.6000000000000001px), radial-gradient(#5b5b5d 0.6000000000000001px, #ffc100 0.6000000000000001px);
+    background-size: 24px 24px;
+    background-position: 0 0,12px 12px;
   }
+  .bg-bAbstrac{
+    background-color: #d2d2ff;
+    opacity: 1;
+    background-image:  linear-gradient(30deg, #bec1ff 12%, transparent 12.5%, transparent 87%, #bec1ff 87.5%, #bec1ff), linear-gradient(150deg, #bec1ff 12%, transparent 12.5%, transparent 87%, #bec1ff 87.5%, #bec1ff), linear-gradient(30deg, #bec1ff 12%, transparent 12.5%, transparent 87%, #bec1ff 87.5%, #bec1ff), linear-gradient(150deg, #bec1ff 12%, transparent 12.5%, transparent 87%, #bec1ff 87.5%, #bec1ff), linear-gradient(60deg, #bec1ff77 25%, transparent 25.5%, transparent 75%, #bec1ff77 75%, #bec1ff77), linear-gradient(60deg, #bec1ff77 25%, transparent 25.5%, transparent 75%, #bec1ff77 75%, #bec1ff77);
+    background-size: 30px 53px;
+    background-position: 0 0, 0 0, 15px 26px, 15px 26px, 0 0, 15px 26px;
+  }
+
+  .curve{
+    /* shape-outside: url('/public/june_portrait.png');
+    width: 75px;
+    height: 200px;
+    float: right;
+    opacity: .2; */
+    float: right;
+    shape-outside: circle(50%);
+    width: 100px;
+    height: 100px;
+    }
