--- a/src/styles.css
+++ b/src/styles.css
@@ -41,3 +41,9 @@
   }
 
   
+  .image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+  }
